# winder-bot

./: winder-bot.code-workspace
firmware/: Cargo.toml  README.md  TODO.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/multistepper/: Cargo.toml
firmware/multistepper/src/: gcode.rs  kinematics.rs  lib.rs  microns.rs  microseconds.rs  millidegrees.rs
firmware/multistepper/src/gcode/: parse_gcode.rs  parse_microns.rs  parse_numbers.rs
firmware/multistepper/src/kinematics/: delay.rs  direction.rs  limit_switch.rs  limited_stepper.rs  linear_converter.rs  positioned_stepper.rs  rotary_converter.rs  stepper.rs  steps.rs
firmware/src/: command.rs  controller.rs  gitm.rs  kinematics.rs  lib.rs  machine.rs  main.rs  readln.rs  uno.rs
firmware/winderbot/: Cargo.toml  avr-atmega328p.json  commands.md  rust-toolchain.toml
firmware/winderbot/src/: commands.rs  devices.rs  machine.rs  main.rs
firmware/winderbot/src/commands/: command.rs  command_parser.rs
firmware/winderbot/src/devices/: delay.rs  limitswitch.rs  read_uart.rs  stepper.rs
