[package]
name = "winderbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "winderbot_firmware"
path = "src/main.rs"
test = false
bench = false

[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "3c089795cadbbc7fa83f45958128689fee7ba1e4", features = [
    "arduino-uno",
] }
multistepper = { path = "../multistepper" }
embedded-hal = "1.0"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "0.2.0"
ufmt = "0.2.0"
ufmt-macros = "0.3.0"

[build-dependencies]
proc-macro2 = "=1.0.79"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
